--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".HomeFragment">
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+
+            <LinearLayout
         android:id="@+id/linear_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -51,7 +61,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/random_meal_card"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_200sdp"
+        android:layout_height="@dimen/_160sdp"
         android:layout_margin="@dimen/_10sdp"
         android:layout_marginStart="@dimen/_25sdp"
         android:layout_marginEnd="@dimen/_25sdp"
@@ -85,25 +95,27 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rec_view_populate"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/_120sdp"
+        android:layout_height="@dimen/_90sdp"
         android:layout_marginStart="@dimen/_25sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvpopulate_items"/>
-    <TextView
-        android:id="@+id/tv_categories"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/_30sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:fontFamily="@font/myfont"
-        android:textColor="@color/black"
-        android:textSize="@dimen/_18ssp"
-        android:textStyle="bold"
-        android:text="Categories"
-        app:layout_constraintStart_toStartOf="@id/rec_view_populate"
-        app:layout_constraintTop_toBottomOf="@id/rec_view_populate" />
-    <androidx.cardview.widget.CardView
+
+            <TextView
+                android:id="@+id/tv_categories"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/myfont"
+                android:text="Categories"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_18ssp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="@id/rec_view_populate"
+                app:layout_constraintTop_toBottomOf="@id/rec_view_populate" />
+
+            <androidx.cardview.widget.CardView
         android:id="@+id/categories_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -120,4 +132,8 @@
             android:layout_height="wrap_content"
             android:scrollbars="none"/>
     </androidx.cardview.widget.CardView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
