--- a/app/src/main/res/layout/activity_meal.xml
+++ b/app/src/main/res/layout/activity_meal.xml
@@ -23,7 +23,6 @@
             app:title="Meal Name">
 
             <ImageView
-
                 android:id="@+id/ivCollapsableImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -41,6 +40,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
 <com.google.android.material.floatingactionbutton.FloatingActionButton
+    android:id="@+id/favouriteFloatingButton"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:src="@drawable/ic_favourite"
@@ -70,6 +70,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
             <TextView
+                android:id="@+id/category"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Category: Beef"
@@ -78,6 +79,7 @@
                 android:textStyle="bold"
                 android:drawableLeft="@drawable/ic_category"/>
             <TextView
+                android:id="@+id/area"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Area: Kenya"
