--- a/app/src/main/res/layout/activity_category_meals.xml
+++ b/app/src/main/res/layout/activity_category_meals.xml
@@ -7,4 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".activities.CategoryMealsActivity">
 
+    <TextView
+        android:id="@+id/categoty_count"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/myfont"
+        android:text="Beef"
+        android:textSize="@dimen/_15ssp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="@dimen/_5sdp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/ivmeals"
+        app:layout_constraintTop_toBottomOf="@id/categoty_count"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        />
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
